# map_app_navigation_service

./: .dockerignore  Cargo.toml  Dockerfile  README.md  class_diagram.plantuml  entrypoint.sh  k8s_service.tmp.yml  navigation_directions_sequence_diagram.plantuml  package-lock.json  package.json
.github/workflows/: main.yml
app/: Cargo.toml
app/src/: main.rs
modules/endpoint/: Cargo.toml
modules/endpoint/src/: lib.rs
modules/service/: Cargo.toml
modules/service/src/: lib.rs  path_builder.rs  service_utils.rs
modules/utils/http_client/: Cargo.toml
modules/utils/http_client/src/: http_utils.rs  lib.rs
modules/utils/misc/src/: lib.rs
src/: index.ts
