[package]
name = "map_app_navigation_service_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
http_client = { path = "../modules/utils/http_client" }
misc = { path = "../modules/utils/misc" }
serde = { version = "1.0.195", features = ["serde_derive"] }
service = { path = "../modules/service" }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread"] }
