[package]
name = "endpoint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
http = "1.0.0"
misc = { path = "../utils/misc" }
service = { path = "../service" }
tokio = "1.35.1"
tower-http = { version = "0.5.1", features = ["cors"] }
